--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Edwardmarshall</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+	<title><%= content_for?(:title) ? content_for(:title) : "Edward Marshall" %></title>
 
-<%= yield %>
+	<!-- META DATA -->
+	<!-- OPEN GRAPH META HERE -->
+
+	<%= csrf_meta_tags %>
+
+	<!-- STYLESHEETS -->
+	<%= stylesheet_link_tag "application", :media => "all" %>
+
+	<!-- SCRIPTS -->
+	<%= javascript_include_tag "application" %>
+
+	<!-- PAGE SCRIPTS -->
+	<%= yield :headscripts %>
+</head>
+<body class="<%= "#{controller.controller_name} #{@body_class}".strip %>">
+	
+	<%= yield %>
 
 </body>
 </html>
