Adding H# styles. Added text to welcome.

--- a/app/assets/stylesheets/bootstrap/_type.scss
+++ b/app/assets/stylesheets/bootstrap/_type.scss
@@ -74,12 +74,12 @@ h1,
 h2,
 h3 { line-height: $baseLineHeight * 2; }
 
-h1 { font-size: $baseFontSize * 2.75; } // ~38px
-h2 { font-size: $baseFontSize * 2.25; } // ~32px
-h3 { font-size: $baseFontSize * 1.75; } // ~24px
-h4 { font-size: $baseFontSize * 1.25; } // ~18px
-h5 { font-size: $baseFontSize; }
-h6 { font-size: $baseFontSize * 0.85; } // ~12px
+h1 { font-size: 42px; font-family: $serifFontFamily; } // ~38px serif
+h2 { font-size: 36px; font-family: $serifFontFamily; } // ~32px serif
+h3 { font-size: 30px; letter-spacing: -0.06em; } // ~24px san-serif
+h4 { font-size: 24px; letter-spacing: -0.06em; } // ~18px san-serif
+h5 { font-size: 20px; letter-spacing: -0.06em; }
+h6 { font-size: $baseFontSize; letter-spacing: -0.06em; } // ~12px
 
 h1 small { font-size: $baseFontSize * 1.75; } // ~24px
 h2 small { font-size: $baseFontSize * 1.25; } // ~18px
