--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Coming soon...</h1>
+<section class="hero text-center">
+	<div class="container">
+		<h1>We work with good companies, that appreciate great work.</h1>
+		<h3>Our approach to web development is based on our in-depth knowledge of digital persuasion.</h3>
+	</div>
+</section>
