--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,15 @@
 <section class="hero text-center">
 	<div class="vert-container">
 		<div class="container">
-			<h1>We work with good companies, that appreciate great work.</h1>
-			<h3>Our approach to web development is based on our in-depth knowledge of digital persuasion.</h3>
+			<div class="site-logo">
+				<div class="logo"><h1>Edward Marshall</h1></div>
+			</div>
+			<div class="message">
+				<h1>We work with good companies, doing great things.</h1>
+				<h3>Our approach to web development is based on our in-depth knowledge of digital persuasion.</h3>
+			</div>
+			<div class="clients">
+			</div>
 		</div>
 	</div>
 </section>
