Added updated SVG to fix font issue.

--- a/app/assets/stylesheets/bootstrap/_edward-marshall.scss
+++ b/app/assets/stylesheets/bootstrap/_edward-marshall.scss
@@ -22,7 +22,7 @@ section.hero {
 
 .logo {
 	background: image-url("emLogo.png") center center no-repeat;
-	background: image-url("emLogo.svg") center center no-repeat;
+	background: image-url("emLogo2.svg") center center no-repeat;
 	height: 145px;
 	margin: 0 auto;
 	width: 500px;
